crates/shipper-events/src/snapshots/shipper_events__tests__execution_started_debug.snap
---
source: crates/shipper-events/src/lib.rs
expression: event
---
PublishEvent {
    timestamp: 2025-01-15T12:00:00Z,
    event_type: ExecutionStarted,
    package: "workspace",
}
