crates/shipper-events/src/snapshots/shipper_events__tests__index_readiness_started_debug.snap
---
source: crates/shipper-events/src/lib.rs
expression: event
---
PublishEvent {
    timestamp: 2025-01-15T12:00:00Z,
    event_type: IndexReadinessStarted {
        crate_name: "my-crate",
        version: "1.0.0",
    },
    package: "my-crate@1.0.0",
}
