crates/shipper-events/src/snapshots/shipper_events__tests__package_attempted_debug.snap
---
source: crates/shipper-events/src/lib.rs
expression: event
---
PublishEvent {
    timestamp: 2025-01-15T12:00:00Z,
    event_type: PackageAttempted {
        attempt: 2,
        command: "cargo publish -p core-lib",
    },
    package: "core-lib@0.1.0",
}
