crates/shipper-events/src/snapshots/shipper_events__tests__package_failed_permanent_debug.snap
---
source: crates/shipper-events/src/lib.rs
expression: event
---
PublishEvent {
    timestamp: 2025-01-15T12:00:00Z,
    event_type: PackageFailed {
        class: Permanent,
        message: "crate name is reserved",
    },
    package: "reserved@1.0.0",
}
