crates/shipper-events/src/snapshots/shipper_events__tests__package_published_yaml.snap
---
source: crates/shipper-events/src/lib.rs
expression: event
---
timestamp: "2025-01-15T12:00:00Z"
event_type:
  type: package_published
  duration_ms: 4500
package: my-crate@1.0.0
