crates/shipper-events/src/snapshots/shipper_events__tests__package_skipped_yaml.snap
---
source: crates/shipper-events/src/lib.rs
expression: event
---
timestamp: "2025-01-15T12:00:00Z"
event_type:
  type: package_skipped
  reason: already published
package: old-crate@0.9.0
